Fixed request card badge overflow bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,8 @@ nav .brand-logo {
 
 // Favorite Count Badge for Request Card
 .favorite_count_badge {
-  margin: 0px 10px 0px 0px !important;
-  padding: 4px 8px 4px 8px !important;
+  margin: 0px 5px 0px 0px !important;
+  padding: 3px 7px 3px 7px !important;
   float: none !important;
+  font-size:10pt;
 }
